--- a/Antihelminthic.html
+++ b/Antihelminthic.html
@@ -25,7 +25,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -93,6 +95,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -445,6 +450,21 @@ div.tocify {
 <div id="summary-of-pv3-studies" class="section level4">
 <h4>Summary of PV3 studies</h4>
 <pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
+</div>
+</div>
+<div id="meta-regression-secondary-moderators" class="section level3">
+<h3>Meta-regression: secondary moderators</h3>
+<div id="age-group" class="section level4">
+<h4>Age group</h4>
+<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+</div>
+<div id="income-setting" class="section level4">
+<h4>Income setting</h4>
+<pre><code>## [1] &quot;Insufficient studies (n studies == n moderators)&quot;</code></pre>
+</div>
+<div id="high-baseline-immunogenicity" class="section level4">
+<h4>High baseline immunogenicity</h4>
+<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
 </div>
 </div>
 </div>
