--- a/Breastfeeding_withheld.html
+++ b/Breastfeeding_withheld.html
@@ -25,7 +25,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -93,6 +95,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -497,16 +502,87 @@ div.tocify {
 <pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 </div>
+<div id="meta-regression-secondary-moderators" class="section level3">
+<h3>Meta-regression: secondary moderators</h3>
+<div id="age-group" class="section level4">
+<h4>Age group</h4>
+<pre><code>## 
+##   infant multiple 
+##        6        1</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 7; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.0605 (SE = 0.0560)
+## tau (square root of estimated tau^2 value):             0.2461
+## I^2 (residual heterogeneity / unaccounted variability): 69.93%
+## H^2 (unaccounted variability / sampling variability):   3.33
+## R^2 (amount of heterogeneity accounted for):            0.00%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 5) = 15.6182, p-val = 0.0080
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 0.0110, p-val = 0.9164
+## 
+## Model Results:
+## 
+##                            estimate      se     zval    pval    ci.lb
+## intrcpt                     -0.0722  0.1216  -0.5940  0.5525  -0.3106
+## factor(Age_group)multiple   -0.0377  0.3589  -0.1049  0.9164  -0.7410
+##                             ci.ub   
+## intrcpt                    0.1661   
+## factor(Age_group)multiple  0.6657   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
+<div id="income-setting" class="section level4">
+<h4>Income setting</h4>
+<pre><code>## 
+## lower_middle upper_middle 
+##            6            1</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 7; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.0612 (SE = 0.0608)
+## tau (square root of estimated tau^2 value):             0.2473
+## I^2 (residual heterogeneity / unaccounted variability): 64.30%
+## H^2 (unaccounted variability / sampling variability):   2.80
+## R^2 (amount of heterogeneity accounted for):            0.00%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 5) = 14.3643, p-val = 0.0135
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 0.3207, p-val = 0.5712
+## 
+## Model Results:
+## 
+##                                     estimate      se     zval    pval
+## intrcpt                              -0.1070  0.1267  -0.8446  0.3983
+## factor(Income_setting)upper_middle    0.1695  0.2993   0.5663  0.5712
+##                                       ci.lb   ci.ub   
+## intrcpt                             -0.3554  0.1413   
+## factor(Income_setting)upper_middle  -0.4172  0.7562   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
+<div id="high-baseline-immunogenicity" class="section level4">
+<h4>High baseline immunogenicity</h4>
+<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+</div>
+</div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="Breastfeeding_withheld_files/figure-html/unnamed-chunk-12-1.png" width="1152" /></p>
+<p><img src="Breastfeeding_withheld_files/figure-html/unnamed-chunk-15-1.png" width="1152" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="Breastfeeding_withheld_files/figure-html/unnamed-chunk-13-1.png" width="576" /></p>
+<p><img src="Breastfeeding_withheld_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
