--- a/Delayed_first_dose.html
+++ b/Delayed_first_dose.html
@@ -25,7 +25,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -93,6 +95,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -452,6 +457,49 @@ div.tocify {
 <div id="summary-of-pv3-studies" class="section level4">
 <h4>Summary of PV3 studies</h4>
 <pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
+</div>
+</div>
+<div id="meta-regression-secondary-moderators" class="section level3">
+<h3>Meta-regression: secondary moderators</h3>
+<div id="age-group" class="section level4">
+<h4>Age group</h4>
+<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+</div>
+<div id="income-setting" class="section level4">
+<h4>Income setting</h4>
+<pre><code>## 
+## lower_middle upper_middle 
+##            3            2</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 5; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.0168 (SE = 0.0348)
+## tau (square root of estimated tau^2 value):             0.1296
+## I^2 (residual heterogeneity / unaccounted variability): 39.84%
+## H^2 (unaccounted variability / sampling variability):   1.66
+## R^2 (amount of heterogeneity accounted for):            0.00%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 3) = 5.0496, p-val = 0.1682
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 0.2134, p-val = 0.6441
+## 
+## Model Results:
+## 
+##                                     estimate      se    zval    pval
+## intrcpt                               0.2926  0.1120  2.6125  0.0090
+## factor(Income_setting)upper_middle    0.0923  0.1999  0.4620  0.6441
+##                                       ci.lb   ci.ub    
+## intrcpt                              0.0731  0.5122  **
+## factor(Income_setting)upper_middle  -0.2994  0.4840    
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
+<div id="high-baseline-immunogenicity" class="section level4">
+<h4>High baseline immunogenicity</h4>
+<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
 </div>
 </div>
 </div>
