--- a/Narrow_dose_interval.html
+++ b/Narrow_dose_interval.html
@@ -25,7 +25,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -93,6 +95,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -476,16 +481,87 @@ div.tocify {
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
 </div>
+<div id="meta-regression-secondary-moderators" class="section level3">
+<h3>Meta-regression: secondary moderators</h3>
+<div id="age-group" class="section level4">
+<h4>Age group</h4>
+<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+</div>
+<div id="income-setting" class="section level4">
+<h4>Income setting</h4>
+<pre><code>## 
+##         high lower_middle 
+##            1            2</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 3; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0 (SE = 0.0089)
+## tau (square root of estimated tau^2 value):             0
+## I^2 (residual heterogeneity / unaccounted variability): 0.00%
+## H^2 (unaccounted variability / sampling variability):   1.00
+## R^2 (amount of heterogeneity accounted for):            NA%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 1) = 0.0216, p-val = 0.8831
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 0.1386, p-val = 0.7096
+## 
+## Model Results:
+## 
+##                                     estimate      se     zval    pval
+## intrcpt                              -0.0377  0.0542  -0.6969  0.4859
+## factor(Income_setting)lower_middle    0.0220  0.0591   0.3723  0.7096
+##                                       ci.lb   ci.ub   
+## intrcpt                             -0.1439  0.0684   
+## factor(Income_setting)lower_middle  -0.0938  0.1378   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
+<div id="high-baseline-immunogenicity" class="section level4">
+<h4>High baseline immunogenicity</h4>
+<pre><code>## 
+##  no yes 
+##   1   2</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 3; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0 (SE = 0.0025)
+## tau (square root of estimated tau^2 value):             0
+## I^2 (residual heterogeneity / unaccounted variability): 0.00%
+## H^2 (unaccounted variability / sampling variability):   1.00
+## R^2 (amount of heterogeneity accounted for):            NA%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 1) = 0.1281, p-val = 0.7204
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 0.0321, p-val = 0.8578
+## 
+## Model Results:
+## 
+##                           estimate      se     zval    pval    ci.lb
+## intrcpt                     0.0000  0.1096   0.0000  1.0000  -0.2148
+## factor(High_baseline)yes   -0.0200  0.1118  -0.1792  0.8578  -0.2392
+##                            ci.ub   
+## intrcpt                   0.2148   
+## factor(High_baseline)yes  0.1991   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
+</div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="Narrow_dose_interval_files/figure-html/unnamed-chunk-12-1.png" width="1248" /></p>
+<p><img src="Narrow_dose_interval_files/figure-html/unnamed-chunk-15-1.png" width="1248" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="Narrow_dose_interval_files/figure-html/unnamed-chunk-13-1.png" width="576" /></p>
+<p><img src="Narrow_dose_interval_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
