--- a/OPV_valence.html
+++ b/OPV_valence.html
@@ -25,7 +25,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -93,6 +95,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -454,16 +459,91 @@ div.tocify {
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
 </div>
+<div id="meta-regression-secondary-moderators" class="section level3">
+<h3>Meta-regression: secondary moderators</h3>
+<div id="age-group" class="section level4">
+<h4>Age group</h4>
+<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+</div>
+<div id="income-setting" class="section level4">
+<h4>Income setting</h4>
+<pre><code>## 
+##         high lower_middle     multiple upper_middle 
+##            1            2            1            2</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.0486 (SE = 0.0659)
+## tau (square root of estimated tau^2 value):             0.2206
+## I^2 (residual heterogeneity / unaccounted variability): 86.19%
+## H^2 (unaccounted variability / sampling variability):   7.24
+## R^2 (amount of heterogeneity accounted for):            78.18%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 2) = 18.3247, p-val = 0.0001
+## 
+## Test of Moderators (coefficient(s) 2:4): 
+## QM(df = 3) = 16.0012, p-val = 0.0011
+## 
+## Model Results:
+## 
+##                                     estimate      se     zval    pval
+## intrcpt                               0.0515  0.2233   0.2305  0.8177
+## factor(Income_setting)lower_middle    0.2314  0.2761   0.8379  0.4021
+## factor(Income_setting)multiple       -0.0553  0.3142  -0.1760  0.8603
+## factor(Income_setting)upper_middle    1.0248  0.3095   3.3109  0.0009
+##                                       ci.lb   ci.ub     
+## intrcpt                             -0.3862  0.4891     
+## factor(Income_setting)lower_middle  -0.3098  0.7725     
+## factor(Income_setting)multiple      -0.6711  0.5605     
+## factor(Income_setting)upper_middle   0.4182  1.6315  ***
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
+<div id="high-baseline-immunogenicity" class="section level4">
+<h4>High baseline immunogenicity</h4>
+<pre><code>## 
+##  no yes 
+##   5   1</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 6; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.2305 (SE = 0.1763)
+## tau (square root of estimated tau^2 value):             0.4801
+## I^2 (residual heterogeneity / unaccounted variability): 98.21%
+## H^2 (unaccounted variability / sampling variability):   55.81
+## R^2 (amount of heterogeneity accounted for):            0.00%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 4) = 71.4084, p-val &lt; .0001
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 1.0028, p-val = 0.3166
+## 
+## Model Results:
+## 
+##                           estimate      se     zval    pval    ci.lb
+## intrcpt                     0.5267  0.2235   2.3567  0.0184   0.0887
+## factor(High_baseline)yes   -0.5305  0.5298  -1.0014  0.3166  -1.5688
+##                            ci.ub   
+## intrcpt                   0.9647  *
+## factor(High_baseline)yes  0.5078   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
+</div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="OPV_valence_files/figure-html/unnamed-chunk-12-1.png" width="1248" /></p>
+<p><img src="OPV_valence_files/figure-html/unnamed-chunk-15-1.png" width="1248" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="OPV_valence_files/figure-html/unnamed-chunk-13-1.png" width="576" /></p>
+<p><img src="OPV_valence_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
