--- a/RVV_separated_from_OPV.html
+++ b/RVV_separated_from_OPV.html
@@ -25,7 +25,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -93,6 +95,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -507,16 +512,91 @@ div.tocify {
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
 </div>
+<div id="meta-regression-secondary-moderators" class="section level3">
+<h3>Meta-regression: secondary moderators</h3>
+<div id="age-group" class="section level4">
+<h4>Age group</h4>
+<pre><code>## [1] &quot;No variation in moderator among studies&quot;</code></pre>
+</div>
+<div id="income-setting" class="section level4">
+<h4>Income setting</h4>
+<pre><code>## 
+##         high          low lower_middle upper_middle 
+##            2            2            2            8</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 14; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.0006 (SE = 0.0009)
+## tau (square root of estimated tau^2 value):             0.0239
+## I^2 (residual heterogeneity / unaccounted variability): 31.40%
+## H^2 (unaccounted variability / sampling variability):   1.46
+## R^2 (amount of heterogeneity accounted for):            10.45%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 10) = 23.5902, p-val = 0.0088
+## 
+## Test of Moderators (coefficient(s) 2:4): 
+## QM(df = 3) = 8.4088, p-val = 0.0383
+## 
+## Model Results:
+## 
+##                                     estimate      se     zval    pval
+## intrcpt                               1.0053  0.3527   2.8504  0.0044
+## factor(Income_setting)low            -0.8966  0.3678  -2.4378  0.0148
+## factor(Income_setting)lower_middle   -0.9697  0.3677  -2.6375  0.0084
+## factor(Income_setting)upper_middle   -0.9835  0.3531  -2.7855  0.0053
+##                                       ci.lb    ci.ub    
+## intrcpt                              0.3140   1.6965  **
+## factor(Income_setting)low           -1.6175  -0.1757   *
+## factor(Income_setting)lower_middle  -1.6904  -0.2491  **
+## factor(Income_setting)upper_middle  -1.6755  -0.2915  **
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
+<div id="high-baseline-immunogenicity" class="section level4">
+<h4>High baseline immunogenicity</h4>
+<pre><code>## 
+##  no yes 
+##  11   3</code></pre>
+<pre><code>## 
+## Mixed-Effects Model (k = 14; tau^2 estimator: REML)
+## 
+## tau^2 (estimated amount of residual heterogeneity):     0.0005 (SE = 0.0008)
+## tau (square root of estimated tau^2 value):             0.0234
+## I^2 (residual heterogeneity / unaccounted variability): 26.76%
+## H^2 (unaccounted variability / sampling variability):   1.37
+## R^2 (amount of heterogeneity accounted for):            14.41%
+## 
+## Test for Residual Heterogeneity: 
+## QE(df = 12) = 28.4775, p-val = 0.0047
+## 
+## Test of Moderators (coefficient(s) 2): 
+## QM(df = 1) = 3.3636, p-val = 0.0667
+## 
+## Model Results:
+## 
+##                           estimate      se     zval    pval    ci.lb
+## intrcpt                     0.1318  0.0599   2.2024  0.0276   0.0145
+## factor(High_baseline)yes   -0.1140  0.0621  -1.8340  0.0667  -0.2357
+##                            ci.ub   
+## intrcpt                   0.2492  *
+## factor(High_baseline)yes  0.0078  .
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+</div>
+</div>
 </div>
 <div id="opv-specific-analysis" class="section level2">
 <h2>OPV-specific analysis</h2>
 <div id="forest-plot-1" class="section level3">
 <h3>Forest plot</h3>
-<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-12-1.png" width="1248" /></p>
+<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-15-1.png" width="1248" /></p>
 </div>
 <div id="funnel-plot-1" class="section level3">
 <h3>Funnel plot</h3>
-<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-13-1.png" width="576" /></p>
+<p><img src="RVV_separated_from_OPV_files/figure-html/unnamed-chunk-16-1.png" width="576" /></p>
 </div>
 <div id="eggers-test-1" class="section level3">
 <h3>Egger’s test</h3>
